--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Hello World!</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cooking with Chloe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <h1>HTML Rocks!</h1>
-  <img src="img/compile.jpeg">
-  <script type="module" src="js/main.js"></script>
-</body>
+    <!-- Navigation Bar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Community</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="grocery.html">Grocery List </a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!-- Main Content -->
+    <main>
+        <h1>Welcome to Cooking with Chloe.</h1>
+        <p>Discover delicious recipes to try out!</p>
+
+        <!-- Recipe Previews -->
+        <section class="recipes">
+            <article>
+                <h2>Fettuccine Alfredo</h2>
+                <p>A rich and creamy classic Italian pasta dish</p>
+                <a href="fettuccine.html">Read More</a>
+            </article>
+
+            <article>
+                <h2>Chicken Tikka Masala</h2>
+                <p>A flavorful Indian dish with tender chicken in a spicy sauce.</p>
+                <a href="chicken-tikka-masala.html">Read More</a>
+            </article>
+
+            <article>
+                <h2>Vegetable Stir-Fry</h2>
+                <p>A quick and easy stir-fry loaded with fresh vegetables.</p>
+                <a href="vegetable-stir-fry.html">Read More</a>
+            </article>
+
+            <!-- Add more recipes as needed -->
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; Cooking with Chloe.  All rights reserved.</p>
+    </footer>
+</body>
 </html>
