--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Kitchen Items</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <h2>Find Kitchen Essentials Below</h2>
         <p>Click on an item to learn more or purchase it online.</p>
         <ul>
-            // just place holders will need to add links
+            
             <li><a href="https://www.amazon.com/placeholder1" target="_blank">Non-Stick Frying Pan</a></li>
             <li><a href="https://www.amazon.com/placeholder2" target="_blank">Chef's Knife</a></li>
             <li><a href="https://www.amazon.com/placeholder3" target="_blank">Cutting Board</a></li>
