--- a/grocery.html
+++ b/grocery.html
@@ -7,7 +7,7 @@
     <title>Grocery List App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/grocery.css">
 </head>
 
 <body>
